feat: выполнил - Числа и операции над ними в JavaScript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <ol>
     <li>Создайте переменную num и присвойте ей значение 123. Выведите значение этой переменной на экран с помощью функции alert.</li>
     <li>Самостоятельно опробуйте все описанные способы объявления переменных.</li>
+    <li>Создайте переменную a. Запишите в нее значение 10, выведите его на экран. Затем запишите в нее значение 20, выведите его на экран.</li>
+    <li>Создайте переменную a. Запишите в нее сумму чисел 1, 2 и 3. С помощью функции alert выведите на экран содержимое переменной a.</li>
+    <li>Выведите с помощью функции alert сумму чисел 1, 2 и 3.</li>
+    <li>Создайте переменную a со значением 10 и переменную b со значением 2. Выведите на экран их сумму, разность, произведение и частное (результат деления).</li>
+    <li>Создайте переменную c со значением 10 и переменную d со значением 5. Просуммируйте их, а результат присвойте переменной result. Выведите на экран значение переменной result.</li>
+    <li>Создайте переменную a со значением 1, переменную b со значением 2 и переменную c со значением 3. Выведите на экран их сумму.</li>
+    <li>Создайте переменную a со значением 10 и переменную b со значением 5. Отнимите от a переменную b и результат присвойте переменной c.
+
+    Затем создайте переменную d, присвойте ей значение 7. Сложите переменные c и d, а результат запишите в переменную result. Выведите на экран значение переменной result.</li>
+    <li>Запишите в переменную a число 1.5, а в переменную b - число 0.75. Найдите сумму значений этих переменных и выведите ее на экран.</li>
+    <li>Создайте переменную a со значением -100. Выведите это значение на экран.</li>
+    <li>Создайте переменную a, запишите в нее какое-нибудь положительное или отрицательное число. Выведите на экран это число с обратным знаком.</li>
+    <li>Дана переменная a со значением 10 и переменная b со значением 3. Найдите остаток от деления a на b.</li>
+    <li>Возведите число 2 в 10-ю степень. Выведите результат на экран.</li>
     <li></li>
   </ol>
   
