feat: выполнил задание: 'Константы в JavaScript'

--- a/index.html
+++ b/index.html
@@ -7,26 +7,74 @@
   <title>Обучение по учебнику http://code.mu/</title>
 </head>
 <body>
-  <ol>
-    <li>Создайте переменную num и присвойте ей значение 123. Выведите значение этой переменной на экран с помощью функции alert.</li>
-    <li>Самостоятельно опробуйте все описанные способы объявления переменных.</li>
-    <li>Создайте переменную a. Запишите в нее значение 10, выведите его на экран. Затем запишите в нее значение 20, выведите его на экран.</li>
-    <li>Создайте переменную a. Запишите в нее сумму чисел 1, 2 и 3. С помощью функции alert выведите на экран содержимое переменной a.</li>
-    <li>Выведите с помощью функции alert сумму чисел 1, 2 и 3.</li>
-    <li>Создайте переменную a со значением 10 и переменную b со значением 2. Выведите на экран их сумму, разность, произведение и частное (результат деления).</li>
-    <li>Создайте переменную c со значением 10 и переменную d со значением 5. Просуммируйте их, а результат присвойте переменной result. Выведите на экран значение переменной result.</li>
-    <li>Создайте переменную a со значением 1, переменную b со значением 2 и переменную c со значением 3. Выведите на экран их сумму.</li>
-    <li>Создайте переменную a со значением 10 и переменную b со значением 5. Отнимите от a переменную b и результат присвойте переменной c.
+<h2>Переменные в JavaScript</h2>
+<ol>
+  <li>Создайте переменную num и присвойте ей значение 123. Выведите значение этой переменной на экран с помощью функции
+    alert.
+  </li>
+  <li>Самостоятельно опробуйте все описанные способы объявления переменных.</li>
+  <li>Создайте переменную a. Запишите в нее значение 10, выведите его на экран. Затем запишите в нее значение 20,
+    выведите его на экран.
+  </li>
+</ol>
 
-    Затем создайте переменную d, присвойте ей значение 7. Сложите переменные c и d, а результат запишите в переменную result. Выведите на экран значение переменной result.</li>
-    <li>Запишите в переменную a число 1.5, а в переменную b - число 0.75. Найдите сумму значений этих переменных и выведите ее на экран.</li>
-    <li>Создайте переменную a со значением -100. Выведите это значение на экран.</li>
-    <li>Создайте переменную a, запишите в нее какое-нибудь положительное или отрицательное число. Выведите на экран это число с обратным знаком.</li>
-    <li>Дана переменная a со значением 10 и переменная b со значением 3. Найдите остаток от деления a на b.</li>
-    <li>Возведите число 2 в 10-ю степень. Выведите результат на экран.</li>
-    <li></li>
-  </ol>
-  
-  <script src="./js/script.js"></script>
+<h2>Числа и операции над ними в JavaScript</h2>
+<ol>
+  <li>Создайте переменную a. Запишите в нее сумму чисел 1, 2 и 3. С помощью функции alert выведите на экран содержимое
+    переменной a.
+  </li>
+  <li>Выведите с помощью функции alert сумму чисел 1, 2 и 3.</li>
+  <li>Создайте переменную a со значением 10 и переменную b со значением 2. Выведите на экран их сумму, разность,
+    произведение и частное (результат деления).
+  </li>
+  <li>Создайте переменную c со значением 10 и переменную d со значением 5. Просуммируйте их, а результат присвойте
+    переменной result. Выведите на экран значение переменной result.
+  </li>
+  <li>Создайте переменную a со значением 1, переменную b со значением 2 и переменную c со значением 3. Выведите на экран
+    их сумму.
+  </li>
+  <li>Создайте переменную a со значением 10 и переменную b со значением 5. Отнимите от a переменную b и результат
+    присвойте переменной c.
+
+    Затем создайте переменную d, присвойте ей значение 7. Сложите переменные c и d, а результат запишите в переменную
+    result. Выведите на экран значение переменной result.
+  </li>
+  <li>Запишите в переменную a число 1.5, а в переменную b - число 0.75. Найдите сумму значений этих переменных и
+    выведите ее на экран.
+  </li>
+  <li>Создайте переменную a со значением -100. Выведите это значение на экран.</li>
+  <li>Создайте переменную a, запишите в нее какое-нибудь положительное или отрицательное число. Выведите на экран это
+    число с обратным знаком.
+  </li>
+  <li>Дана переменная a со значением 10 и переменная b со значением 3. Найдите остаток от деления a на b.</li>
+  <li>Возведите число 2 в 10-ю степень. Выведите результат на экран.</li>
+</ol>
+
+<h2>Строки в JavaScript</h2>
+<ol>
+  <li>Создайте переменную str и присвойте ей строку '!!!'. Выведите значение этой переменной на экран.</li>
+  <li>Создайте переменную с текстом 'java' и переменную с текстом 'script'. С помощью этих переменных и операции сложения строк выведите на экран строку 'javascript'.</li>
+  <li>Создайте переменную с текстом 'hello' и переменную с текстом 'world'. С помощью этих переменных и операции сложения строк выведите на экран строку 'hello world'.</li>
+  <li>Запишите в переменную какую-нибудь строку. Выведите на экран длину вашей строки.</li>
+  <li>Запишите в переменную str строку, состоящую из символов 'a', 'b', 'c', причем после каждого символа, кроме последнего, должен стоять перенос строки. Выведите значение переменной на экран. </li>
+</ol>
+
+<h2>Специальные значения в JavaScript</h2>
+<ol>
+  <li>Объявите переменную, не задавая ей значения. Выведите значение созданной переменной на экран.</li>
+  <li>Присвойте переменной значение null. Выведите эту переменную на экран.</li>
+  <li>Присвойте переменной значение true. Выведите эту переменную на экран.</li>
+  <li>Присвойте переменной значение false. Выведите эту переменную на экран.</li>
+  <li>Сделайте две строки. Перемножьте их друг на друга. Выведите результат умножения на экран.</li>
+  <li>Поделите число 10 на 0. Выведите результат на экран.</li>
+  <li>Поделите число -10 на 0. Выведите результат на экран.</li>
+</ol>
+
+<h2>Константы в JavaScript</h2>
+<ol>
+  <li>Сделайте константу PI и с ее помощью вычислите длину какой-нибудь окружности по ее радиусу.</li>
+</ol>
+
+<script src="./js/script.js"></script>
 </body>
 </html>
