feat: выполнил задание: Примеры на переменные и операции в JavaScript

--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
 <h2>Строки в JavaScript</h2>
 <ol>
   <li>Создайте переменную str и присвойте ей строку '!!!'. Выведите значение этой переменной на экран.</li>
-  <li>Создайте переменную с текстом 'java' и переменную с текстом 'script'. С помощью этих переменных и операции сложения строк выведите на экран строку 'javascript'.</li>
-  <li>Создайте переменную с текстом 'hello' и переменную с текстом 'world'. С помощью этих переменных и операции сложения строк выведите на экран строку 'hello world'.</li>
+  <li>Создайте переменную с текстом 'java' и переменную с текстом 'script'. С помощью этих переменных и операции
+    сложения строк выведите на экран строку 'javascript'.
+  </li>
+  <li>Создайте переменную с текстом 'hello' и переменную с текстом 'world'. С помощью этих переменных и операции
+    сложения строк выведите на экран строку 'hello world'.
+  </li>
   <li>Запишите в переменную какую-нибудь строку. Выведите на экран длину вашей строки.</li>
-  <li>Запишите в переменную str строку, состоящую из символов 'a', 'b', 'c', причем после каждого символа, кроме последнего, должен стоять перенос строки. Выведите значение переменной на экран. </li>
+  <li>Запишите в переменную str строку, состоящую из символов 'a', 'b', 'c', причем после каждого символа, кроме
+    последнего, должен стоять перенос строки. Выведите значение переменной на экран.
+  </li>
 </ol>
 
 <h2>Специальные значения в JavaScript</h2>
@@ -73,6 +79,46 @@
 <h2>Константы в JavaScript</h2>
 <ol>
   <li>Сделайте константу PI и с ее помощью вычислите длину какой-нибудь окружности по ее радиусу.</li>
+</ol>
+
+<h2>Примеры на переменные и операции в JavaScript</h2>
+<ol>
+  <li>Найдите количество секунд в сутках.</li>
+  <li>Найдите количество секунд в 30 сутках.</li>
+  <li>Найдите количество секунд в году.</li>
+  <li>Найдите количество минут в сутках.</li>
+  <li>Найдите количество минут в году.</li>
+</ol>
+
+<h2>Перевод в байты и наоборот</h2>
+<ol>
+  <li>Найдите количество байт в мегабайте.</li>
+  <li>Найдите количество байт в гигабайте.</li>
+  <li>Найдите количество байт в 10 гигабайтах.</li>
+  <li>Найдите количество байт в терабайте.</li>
+  <li>Найдите количество килобайт в терабайте.</li>
+</ol>
+
+<h2>Площади фигур</h2>
+<ol>
+  <li>Пусть дана переменная r с радиусом круга. По соответствующей формуле найдите площадь круга и запишите ее в
+    переменную s. Выведите содержимое этой переменной на экран.
+  </li>
+  <li>Пусть дана переменная a со стороной квадрата. Найдите площадь квадрата и запишите ее в переменную s. Выведите
+    содержимое этой переменной на экран.
+  </li>
+  <li>Пусть даны переменные a и b со сторонами прямоугольника. Найдите площадь прямоугольника и запишите ее в переменную
+    s. Выведите содержимое этой переменной на экран.
+  </li>
+  <li>Пусть даны переменные a и b со сторонами прямоугольника. Найдите периметр прямоугольника и запишите его в
+    переменную p. Выведите содержимое этой переменной на экран.
+  </li>
+</ol>
+
+<h2>Из Цельсия в Фаренгейты и наоборот</h2>
+<ol>
+  <li>Пусть дана переменная tc с температурой в градусах Цельсия. По соответствующей формуле выполните перевод этой температуры в градусы Фаренгейта.</li>
+  <li>Пусть дана переменная tf с температурой в градусах Фаренгейта. По соответствующей формуле выполните перевод этой температуры в градусы Цельсия.</li>
 </ol>
 
 <script src="./js/script.js"></script>
